--- a/test2.html
+++ b/test2.html
@@ -1,20 +1,109 @@
-<!--要插入內容的DOM-->
-<div id="root"></div>
+<!DOCTYPE html>
+<html lang="en">
 
-<!--react-->
-<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-<!--Babel-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.18.1/babel.min.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="./Img/favicon.png" />
+    <title>快取早餐</title>
+    <!--react-->
+    <!--babel-standalone 如何使用多个import、export  https://juejin.cn/post/6902323049513615374 -->
+    <!--<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>-->
+    <!--Babel-->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.18.1/babel.min.js"></script>-->
+    <!--<script src="lib/react.production.min.js"></script>
+    <script src="lib/react-dom.production_v16_14.min.js"></script>
+    <script src="lib/babel.min.js"></script>-->
 
-<!--記得要設定type="text/babel"-->
-<script type="text/babel">
-//建立一個DOM物件
-let element = <h1>Hello, world!</h1>
+    <script src="lib/react.production.17.0.2.min.js"></script>
+    <script src="lib/react-dom.production.17.0.2.min.js"></script>
+    <script src="lib/babel.7.18.9.min.js"></script>
+    <script src="lib/jquery-3.2.1.js"></script>
 
-//使用ReactDOM.render把剛建立的物件element插入目標DOM中
-ReactDOM.render(
-  element,
-  document.getElementById('root')
-);
-</script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+            crossorigin="anonymous"></script>
+
+    <title>快取早餐</title>
+    <link href="./index.css" rel="stylesheet" />
+
+
+    <script src="./food.js"></script>
+    <script src="./all_test2.js"></script>
+</head>
+
+<body>
+    <!--要插入內容的DOM-->
+    <div id="root"></div>
+
+    <!--記得要設定type="text/babel"-->
+    <!--<script type="text/javascript">-->
+    <!--js 載入 的順序也很重要(向依性)  -->
+    <script type="text/babel" data-plugins="transform-modules-umd" src="./app.jsx"></script>
+    <script type="text/babel" data-plugins="transform-modules-umd">
+        import {App} from './app';
+
+         console.log("-- strat --");
+         function MyText(){
+         return(<div>Text is react</div>);
+         }
+         //建立一個DOM物件
+         let element = <h1>Hello, world! <MyText />
+         </h1>
+             //使用ReactDOM.render把剛建立的物件element插入目標DOM中
+             ReactDOM.render(
+                <App />,
+                 document.getElementById('root')
+             );
+         var adModal = new bootstrap.Modal(document.getElementById('adModal'), {
+         keyboard: false
+         })
+         adModal.show();
+    </script>
+    <script>
+        var filter = (filter) => {
+            const cards = document.getElementsByClassName("col-sm-12");
+            for (let i = 0; i < cards.length; i++) {
+                let title = cards[i].querySelector(".card .card-body .card-title");
+                if (title.innerText.indexOf(filter) > -1) {
+                    cards[i].classList.remove("d-none")
+                } else {
+                    cards[i].classList.add("d-none")
+                }
+            }
+        }
+        //彈出loginModal
+        function showLoginModal() {
+            renderLoginModal();
+            $('#loginModal').modal('show');
+        }
+        //彈出廣告Modal
+        function showAdModal() {
+            $('#adModal').modal('show');
+        }
+        //彈出導覽Modal
+        function showGuideModal() {
+            $('#guideModal').modal('show');
+        }
+        //篩選菜單
+        function filterMenu(getname) {
+            //const cat = $("input[name='分類標籤']:checked").val();
+            let cat = getname;
+            if (cat == '全部') {
+                $('div[name="foodCat"]').show();
+            } else {
+                $('div[name="foodCat"]').hide();
+                $(`div[name="foodCat"][data-cat="${cat}"]`).show();
+            }
+        }
+        //window.onload = (event) => {
+        //    console.log("page is fully loaded");
+        //    showAdModal();
+        //};
+    </script>
+</body>
+</html>
